about page updates

--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -57,25 +57,19 @@
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Delivery</h5>
-						<!-- Text -->
-						<div>of the right care, at the right time, in the right place</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Delivery of the right care, at the right time, in the right place</h5>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Reduced</h5>
-						<!-- Text -->
-						<div>healthcare costs for patients, employers and health plans</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Reduced healthcare costs for patients, employers and health plans</h5>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Improved physician reimbursement</h5>
-						<!-- Text -->
-						<div>through demonstrated quality improvements and reductions in health care delivery costs</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Improved physician reimbursement through demonstrated quality improvements and reductions in health care delivery costs</h5>
 					</a>
 				</div>
 			</div>
@@ -87,9 +81,9 @@
 				<div class="col-sm-6 col-md-6">
 					<div class="section-title text-left">
 						<!-- Heading -->
-						<h2 class="title">Medicare Shared Savings Program</h2>
+						<h2 class="title">Accountable Care Organization</h2>
 					</div>
-					<p>{{ company_name }} is participating in the Medicare Shared Savings Program (MSSP) Accountable Care program. The SHP Accountable Care Organization (ACO) is made up of a subset of SHP's physicians who have agreed to meet an extra set of government requirements in order to give coordinated high quality care to their Medicare patients. When our ACO succeeds both in delivering high-quality care and spending health care dollars more wisely, we will share in the savings we helped to achieve for the Medicare program.</p>
+					<p>Scottsdale Health Partners is participating in the Medicare Shared Savings Program (MSSP) Accountable Care program. The SHP Accountable Care Organization (ACO) is made up of a subset of SHP's physicians who have agreed to meet an extra set of government requirements in order to give coordinated high quality care to their Medicare patients. When our ACO succeeds both in delivering high-quality care and spending health care dollars more wisely, we will share in the savings we helped to achieve for the Medicare program.</p>
 				</div>
 				<div class="col-sm-6 col-md-6">
 					<div class="section-title text-left">
