--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -136,7 +136,7 @@
 		<!-- Special Feature Box 2 -->
 		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
-				<a href="{{ path('for_patients') }}">
+				<a href="{{ path('hospitals') }}">
 					<div class="mask-top">
 						<!-- Icon -->
 						<i class="fa fa-hospital-o"></i>
