Faron updates Home page

--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -125,7 +125,7 @@
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> 2% - 10% Annual Cost Improvement</h5>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Up to 10% Annual Cost Improvement</h5>
 					</a>
 				</div>
 			</div>
