--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -28,6 +28,17 @@
 							style="text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
 							<strong><span class="text-color">Find</span> a <br>Physician</strong>
 						</h2>
+						<div class="tp-caption lfr skewtoright description text-left hidden-xs"
+							 data-x="12"
+							 data-y="400"
+							 data-speed="1000"
+							 data-start="1900"
+							 data-easing="Power4.easeOut"
+							 data-endspeed="500"
+							 data-endeasing="Power1.easeIn"
+							 style="max-width: 600px; text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
+							<h4><a href="{{ path('our_physicians') }}"><span style="background: #8EB4E6; padding: 5px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">Learn More</span></a></h4>
+						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/slider/slide-1-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 				</li>
@@ -222,7 +233,7 @@
 			<h2 class="entry-title"><a href="#">Our mission</a></h2>
 			<!-- Content -->
 			<div class="entry-content">
-				<p>{{ company_name }} is a collaboration of medical professionals and a local healthcare system committed to providing high quality, coordinated and innovative care for the patients and families we serve.</p>
+				<p>Scottsdale Health Partners is a collaboration of medical professionals and a local healthcare system committed to providing high quality, coordinated and innovative care for the patients and families we serve.</p>
 			</div>
 		</div>
 		<div class="item">
