added pdf rendering bundle to view pdf files view browser. added a download and view option for the PDF file on the physician directory.

--- a/src/SiteBundle/Resources/views/ForPatients/ourPhysicians.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/ourPhysicians.html.twig
@@ -21,7 +21,8 @@
 					<i class="fa fa-user-md i-10x icons-circle text-color light-bg border-color"></i>
 					<div class="row">
 						<div class="col-xs-12">
-							<a target="_blank" href="{{ asset('bundles/site/pdf/SHP-Physician-Directory.pdf') }}"><i class="fa fa-download"></i> Download</a>
+							<a target="_blank" href="{{ asset('bundles/site/pdf/SHP-Physician-Directory.pdf') }}"><i class="fa fa-download"></i> Download</a> /
+							<a href="{{ path('_p_d_f_view', {'file': 'SHP-Physician-Directory.pdf'}) }}"><i class="fa fa-eye"></i> View</a>
 						</div>
 					</div>
 				</div>
@@ -30,7 +31,8 @@
 					<i class="fa fa-child i-10x icons-circle text-color light-bg border-color"></i>
 					<div class="row">
 						<div class="col-xs-12">
-							<a target="_blank" href="{{ asset('bundles/site/pdf/SHP-PedDirectory-5_19_15.pdf') }}"><i class="fa fa-download"></i> Download</a>
+							<a target="_blank" href="{{ asset('bundles/site/pdf/SHP-PedDirectory-5_19_15.pdf') }}"><i class="fa fa-download"></i> Download</a> /
+							<a href="{{ path('_p_d_f_view', {'file': 'SHP-PedDirectory-5_19_15.pdf'}) }}"><i class="fa fa-eye"></i> View</a>
 						</div>
 					</div>
 				</div>
