--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -34,43 +34,43 @@
 				<h2 class="title">Clinical Integration is designed to improve healthcare delivery through:</h2>
 			</div>
 			<div class="row">
-				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+				<div class="col-sm-6 col-md-4">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Remarkable improvements in clinical outcomes and evidence-based care for patients</h5>
-					</a>
+						<li>Remarkable improvements in clinical outcomes and evidence-based care for patients</li>
+					</ul>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Coordinated care between physicians, hospitals and other healthcare professionals</h5>
-					</a>
+						<li>Coordinated care between physicians, hospitals and other healthcare professionals</li>
+					</ul>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Quality of care and performance reports</h5>
-					</a>
+						<li>Quality of care and performance reports</li>
+					</ul>
 				</div>
 			</div>
 			<div class="row">
 				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Delivery of the right care, at the right time, in the right place</h5>
-					</a>
+						<li>Delivery of the right care, at the right time, in the right place</li>
+					</ul>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Reduced healthcare costs for patients, employers and health plans</h5>
-					</a>
+						<li>Reduced healthcare costs for patients, employers and health plans</li>
+					</ul>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
-					<a href="#">
+					<ul class="check-style f-5x title">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Improved physician reimbursement through demonstrated quality improvements and reductions in health care delivery costs</h5>
-					</a>
+						<li>Improved physician reimbursement through demonstrated quality improvements and reductions in health care delivery costs</li>
+					</ul>
 				</div>
 			</div>
 		</div>
