--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -1,4 +1,4 @@
-{% set title = 'Board of Directors' %}
+{% set title = 'Board of Managers' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:About:boardOfDirectors{% endblock %}
@@ -98,7 +98,7 @@
 							</div>
 							<div id="john-neil" class="panel-collapse collapse">
 								<div class="panel-body">
-									<p>MD, Radiology, SMIL</p>
+									<p>MD, Radiology, SMIL, Chief Physician Executive, HonorHealth</p>
 								</div>
 							</div>
 						</div>
