linked the Click Here

--- a/src/SiteBundle/Resources/views/ForPhysicians/forPhysicians.html.twig
+++ b/src/SiteBundle/Resources/views/ForPhysicians/forPhysicians.html.twig
@@ -25,7 +25,7 @@
 							 data-endspeed="500"
 							 data-endeasing="Power1.easeIn"
 							 style="max-width: 600px; background: #8EB4E6; padding: 10px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">
-							<p class="no-margin">If you are already a member, <a href="#" class="inverse"><strong>click here</strong></a>.</p>
+							<p class="no-margin">If you are already a member, <a href="http://scottsdalehealthpartners.com/" target="_blank" class="inverse"><strong>click here</strong></a>.</p>
 						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/for-physicians/heading-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat" />
