more site updates

--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -40,13 +40,13 @@
 						<li>Remarkable improvements in clinical outcomes and evidence-based care for patients</li>
 					</ul>
 				</div>
-				<div class="item-box col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<ul class="check-style f-5x title">
 						<!-- Title -->
 						<li>Coordinated care between physicians, hospitals and other healthcare professionals</li>
 					</ul>
 				</div>
-				<div class="item-box col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<ul class="check-style f-5x title">
 						<!-- Title -->
 						<li>Quality of care and performance reports</li>
@@ -54,19 +54,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="item-box col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<ul class="check-style f-5x title">
 						<!-- Title -->
 						<li>Delivery of the right care, at the right time, in the right place</li>
 					</ul>
 				</div>
-				<div class="item-box col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<ul class="check-style f-5x title">
 						<!-- Title -->
 						<li>Reduced healthcare costs for patients, employers and health plans</li>
 					</ul>
 				</div>
-				<div class="item-box col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4">
 					<ul class="check-style f-5x title">
 						<!-- Title -->
 						<li>Improved physician reimbursement through demonstrated quality improvements and reductions in health care delivery costs</li>
