--- a/src/SiteBundle/Resources/views/About/whatWeDo.html.twig
+++ b/src/SiteBundle/Resources/views/About/whatWeDo.html.twig
@@ -11,24 +11,41 @@
 	</div>
 	<!-- page-header -->
 	<section id="features" class="page-section">
-		<div class="container text-center">
-			<div class="section-title">
-				<!-- Heading -->
-				<h2 class="title">Industry-leading Communication</h2>
-			</div>
+		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">
-					<p>{{ company_name }} has created a local network for physicians that have agreed to come together to deliver high quality, cost efficient care.  Through SHP, physician members have access to industry-leading communication and collaboration technologies, best practice care coordination services, and access to insurance value based contracts.</p>
+				<div class="col-sm-6 col-md-4">
+					<ul class="check-style f-5x title no-margin">
+						<!-- Title -->
+						<li>Improved quality of care</li>
+					</ul>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<ul class="check-style f-5x title no-margin">
+						<!-- Title -->
+						<li>Improved patient satisfaction</li>
+					</ul>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<ul class="check-style f-5x title no-margin">
+						<!-- Title -->
+						<li>Healthcare cost reduction</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section id="what-we-do" class="page-section light-bg">
-		<div class="container">
-			<div class="section-title">
-				<!-- Heading -->
-				<h2 class="title">Fundamentally, {{ company_name }} does the following</h2>
+		<div class="container text-center">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="lead">{{ company_name }} has created a local network for physicians that have agreed to come together to deliver high quality, cost efficient care.  Through SHP, physician members have access to industry-leading communication and collaboration technologies, best practice care coordination services, and access to insurance value based contracts.</p>
+				</div>
 			</div>
+		</div>
+	</section>
+	<section id="network" class="page-section">
+		<div class="container text-center">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner">
@@ -90,11 +107,6 @@
 							</div>
 						</li>
 					</ul>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="lead">Everything SHP does helps lead to improved quality of care, improved patient satisfaction, and healthcare cost reductions.</p>
 				</div>
 			</div>
 		</div>
