updated to NOT have physician directory linked ANYWHERE as of right now, and made sure that anywhere Scottsdale Health Partners is on the site as text, it uses the variable {{ company_name }}

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -33,7 +33,7 @@
 							<!-- List Items -->
 							<li><a href="{{ path('news') }}">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a></li>
 							<li><a href="{{ path('news') }}">The One Thing That's Impeding Your Hospital from Moving to the New Health Care Paradigm</a></li>
-							<li><a href="{{ path('news') }}">Leading ACO, Scottsdale Health Partners, Reduces Care Coordination Costs by 10% with TigerText</a></li>
+							<li><a href="{{ path('news') }}">Leading ACO, {{ company_name }}, Reduces Care Coordination Costs by 10% with TigerText</a></li>
 						</ul>
 					</nav>
 				</div>
