--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -21,7 +21,7 @@
 					<div class="section-title text-left">
 						<h2 class="title">Superior Quality Patient-Centered Services</h2>
 					</div>
-					<p><span class="lead">Scottsdale Health Partners, LLC is an organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 630 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and covers more than 35,000 patients.</p>
+					<p><span class="lead">{{ company_name }}, LLC is an organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 630 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and covers more than 35,000 patients.</p>
 					<p>Clinical Integration is key to improving healthcare quality while eliminating inefficient spending, and SHP's physician-led network offers the tools necessary to deliver best practice patient care.</p>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 						<!-- Heading -->
 						<h2 class="title">Accountable Care Organization</h2>
 					</div>
-					<p>Scottsdale Health Partners is participating in the Medicare Shared Savings Program (MSSP) Accountable Care program. The SHP Accountable Care Organization (ACO) is made up of a subset of SHP's physicians who have agreed to meet an extra set of government requirements in order to give coordinated high quality care to their Medicare patients. When our ACO succeeds both in delivering high-quality care and spending health care dollars more wisely, we will share in the savings we helped to achieve for the Medicare program.</p>
+					<p>{{ company_name }} is participating in the Medicare Shared Savings Program (MSSP) Accountable Care program. The SHP Accountable Care Organization (ACO) is made up of a subset of SHP's physicians who have agreed to meet an extra set of government requirements in order to give coordinated high quality care to their Medicare patients. When our ACO succeeds both in delivering high-quality care and spending health care dollars more wisely, we will share in the savings we helped to achieve for the Medicare program.</p>
 				</div>
 				<div class="col-sm-6 col-md-6">
 					<div class="section-title text-left">
