--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -34,7 +34,7 @@
 							</div>
 							<div id="tiffany-nelson" class="panel-collapse collapse">
 								<div class="panel-body">
-									<p>MD, Family Medicine, CSO Scottsdale Health Partners, Desert Ridge Family Physicians</p>
+									<p>MD, Family Medicine, CSO {{ company_name }}, Desert Ridge Family Physicians</p>
 								</div>
 							</div>
 						</div>
