--- a/src/SiteBundle/Resources/views/Aco/aco.html.twig
+++ b/src/SiteBundle/Resources/views/Aco/aco.html.twig
@@ -16,7 +16,7 @@
 					<div class="section-title">
 						<h2 class="title">What is an ACO?</h2>
 					</div>
-					<p class="lead">Scottsdale Health Partners (SHP) is a physician-led Accountable Care Organization whose mission is to transform care delivery in the Scottsdale Community. SHP is a joint venture formed by Scottsdale Healthcare (SHC) and Scottsdale Physician Organization. Scottsdale Physician Organization is comprised of over 500 community physicians.</p>
+					<p class="lead">{{ company_name }} (SHP) is a physician-led Accountable Care Organization whose mission is to transform care delivery in the Scottsdale Community. SHP is a joint venture formed by Scottsdale Healthcare (SHC) and Scottsdale Physician Organization. Scottsdale Physician Organization is comprised of over 500 community physicians.</p>
 					<p>SHP's network offers the strength of a world class hospital system (Scottsdale Healthcare) with three hospitals serving the Scottsdale community along with a broad network of physicians representing the full spectrum of specialties including over 80 primary care physicians.</p>
 				</div>
 			</div>
