--- a/src/SiteBundle/Resources/views/Aco/acoReporting.html.twig
+++ b/src/SiteBundle/Resources/views/Aco/acoReporting.html.twig
@@ -23,7 +23,7 @@
 							<div id="name-location" class="panel-collapse collapse">
 								<div class="panel-body">
 									<p>
-										Scottsdale Health Partners<br/>
+										{{ company_name }}<br/>
 										8901 E. Mountain View Rd., Suite 130<br/>
 										Scottsdale, AZ  85258
 									</p>
@@ -50,7 +50,7 @@
 						<div class="panel panel-default mix panel-bg web-design all">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#composition">Composition of Scottsdale Health Partners (SHP)</a>
+									<a data-toggle="collapse" data-parent="#accordion" href="#composition">Composition of {{ company_name }} (SHP)</a>
 								</div>
 							</div>
 							<div id="composition" class="panel-collapse collapse">
@@ -62,7 +62,7 @@
 						<div class="panel panel-default mix panel-bg ecommerce all">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#participants">Scottsdale Health Partners Participants</a>
+									<a data-toggle="collapse" data-parent="#accordion" href="#participants">{{ company_name }} Participants</a>
 								</div>
 							</div>
 							<div id="participants" class="panel-collapse collapse">
@@ -167,7 +167,7 @@
 						<div class="panel panel-default mix panel-bg graphis-design all">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#governing-body">Scottsdale Health Partners Governing Body</a>
+									<a data-toggle="collapse" data-parent="#accordion" href="#governing-body">{{ company_name }} Governing Body</a>
 								</div>
 							</div>
 							<div id="governing-body" class="panel-collapse collapse">
@@ -190,7 +190,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#committees">Scottsdale Health Partners Committees and Key Leadership Personnel</a>
+									<a data-toggle="collapse" data-parent="#accordion" href="#committees">{{ company_name }} Committees and Key Leadership Personnel</a>
 								</div>
 							</div>
 							<div id="committees" class="panel-collapse collapse">
