--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -86,10 +86,10 @@
 								<div class="timeline-body">
 									<div class="post-item">
 										<h2 class="post-title">
-											<a href="{{ path('_p_d_f_view', {'file': 'Scottsdale-Health-Partners-Case-Study.pdf'}) }}>Leading ACO, Scottsdale Health Partners, Reduces Care Coordination Costs by 10% with TigerText</a>
+											<a href="{{ path('_p_d_f_view', {'file': 'Scottsdale-Health-Partners-Case-Study.pdf'}) }}>Leading ACO, {{ company_name }}, Reduces Care Coordination Costs by 10% with TigerText</a>
 										</h2>
 										<div class="post-content">
-											<p>Scottsdale Health Partners (SHP) is a physician-led Clinical Integration Network and Accountable Care Organization (ACO) aiming to transform care delivery in the Arizona community. It is a joint venture formed by Scottsdale Lincoln Health Network (SLHN) and the Scottsdale Physician Organization, which is comprised of over 600 community physicians. SHP's network oers a world-class healthcare network of hospitals, physicians and clinicians that provides patients with a comprehensive, cohesive and integrated experience from their doctor’s oce to the hospital to ongoing care settings.</p>
+											<p>{{ company_name }} (SHP) is a physician-led Clinical Integration Network and Accountable Care Organization (ACO) aiming to transform care delivery in the Arizona community. It is a joint venture formed by Scottsdale Lincoln Health Network (SLHN) and the Scottsdale Physician Organization, which is comprised of over 600 community physicians. SHP's network oers a world-class healthcare network of hospitals, physicians and clinicians that provides patients with a comprehensive, cohesive and integrated experience from their doctor’s oce to the hospital to ongoing care settings.</p>
 										</div>
 									</div>
 								</div>
@@ -112,10 +112,10 @@
 								<div class="timeline-body">
 									<div class="post-item">
 										<h2 class="post-title">
-											<a target="_blank" href="http://www.bizjournals.com/phoenix/blog/health-care-daily/2013/06/scottsdale-health-partners-cigna-team.html">Scottsdale Health Partners, Cigna team on accountable care initiative</a>
+											<a target="_blank" href="http://www.bizjournals.com/phoenix/blog/health-care-daily/2013/06/scottsdale-health-partners-cigna-team.html">{{ company_name }}, Cigna team on accountable care initiative</a>
 										</h2>
 										<div class="post-content">
-											<p>Scottsdale Health Partners and Cigna Corp. are teaming up to launch a collaborative accountable care initiative.</p>
+											<p>{{ company_name }} and Cigna Corp. are teaming up to launch a collaborative accountable care initiative.</p>
 											<p>Collaborative accountable care is Cigna’s approach to accomplishing the same goals as accountable care organizations, without creating a formal ACO. The initiative is designed to improve patient access to health care, enhance care coordination and reduce costs.</p>
 										</div>
 									</div>
