--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -8,7 +8,7 @@
 	<meta name="author" content="zozothemes.com" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-	<title>Scottsdale Health Partners{% if title is defined %} | {{ title }}{% endif %}</title>
+	<title>{{ company_name }}{% if title is defined %} | {{ title }}{% endif %}</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
