--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -107,7 +107,7 @@
 							 data-endspeed="500"
 							 data-endeasing="Power1.easeIn"
 							 style="max-width: 600px; text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
-							<h4>More than 600 local healthcare providers have joined Scottsdale Health Partners<br/><a href="http://www.scottsdalehealthpartners.com/"><span style="background: #8EB4E6; padding: 5px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">Click here</span></a> to login or to request access<br/>to the SHP physician member website</h4>
+							<h4>More than 600 local healthcare providers have joined {{ company_name }}<br/><a href="http://www.scottsdalehealthpartners.com/"><span style="background: #8EB4E6; padding: 5px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">Click here</span></a> to login or to request access<br/>to the SHP physician member website</h4>
 						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/slider/slide-3-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
@@ -127,7 +127,7 @@
 		<!-- Special Feature Box 1 -->
 		<div class="col-xs-6 col-sm-3">
 			<div class="s-feature-box text-center">
-				<a href="{{ path('physician_directory') }}">
+				<a href="{{ path('our_physicians') }}">
 					<div class="mask-top">
 						<!-- Icon -->
 						<i class="fa fa-user-md"></i>
@@ -233,7 +233,7 @@
 			<h2 class="entry-title"><a href="#">Our mission</a></h2>
 			<!-- Content -->
 			<div class="entry-content">
-				<p>Scottsdale Health Partners is a collaboration of medical professionals and a local healthcare system committed to providing high quality, coordinated and innovative care for the patients and families we serve.</p>
+				<p>{{ company_name }} is a collaboration of medical professionals and a local healthcare system committed to providing high quality, coordinated and innovative care for the patients and families we serve.</p>
 			</div>
 		</div>
 		<div class="item">
