--- a/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/insurancePlans.html.twig
@@ -50,7 +50,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<a class="black" href="{{ path('physician_directory') }}">Find an SHP doctor</a> near you
+					<a class="black" href="{{ path('our_physicians') }}">Find an SHP doctor</a> near you
 				</div>
 			</div>
 		</div>
