--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -46,7 +46,7 @@
 							<div class="col-xs-10 col-height col-middle">
 								<div class="inside">
 									<div class="title">Phones</div>
-									<p>Support: {{ company_phone }}</p>
+									<p>{{ company_phone }}</p>
 								</div>
 							</div>
 						</div>
@@ -60,8 +60,8 @@
 							</div>
 							<div class="col-xs-10 col-height col-middle">
 								<div class="inside">
-									<div class="title">Email Addresses</div>
-									<p>Support: <a href="mailto:{{ support_email }}">{{ support_email }}</a></p>
+									<div class="title">Email Address</div>
+									<p><a href="mailto:{{ support_email }}">{{ support_email }}</a></p>
 								</div>
 							</div>
 						</div>
