updated testimonial slider speed

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -253,7 +253,7 @@
 
 {# PATIENT TESTIMONIALS #}
 {% block pe_patient_testimonials %}
-	<div class="owl-carousel pagination-1 dark-switch owl-theme animated fadeInRight visible" data-animation="fadeInRight" data-singleitem="true" data-navigation="false" data-autoplay="true" data-pagination="true" data-effect="backSlide">
+	<div class="owl-carousel pagination-1 dark-switch owl-theme animated fadeInRight visible" data-animation="fadeInRight" data-singleitem="true" data-navigation="false" data-autoplay="7000" data-pagination="true" data-effect="backSlide">
 		<div class="item">
 			<div class="desc-border bottom-arrow">
 				<blockquote class="small-text text-center">
