all other requested changes for 9/14/2015 completed

--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -98,7 +98,7 @@
 							</div>
 							<div id="john-neil" class="panel-collapse collapse">
 								<div class="panel-body">
-									<p>MD, Radiology, SMIL, Chief Physician Executive, HonorHealth</p>
+									<p>MD, Chief Physician Executive, HonorHealth</p>
 								</div>
 							</div>
 						</div>
