--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -45,7 +45,7 @@
 							</div>
 							<div class="col-xs-10 col-height col-middle">
 								<div class="inside">
-									<div class="title">Phones</div>
+									<div class="title">Phone</div>
 									<p>{{ company_phone }}</p>
 								</div>
 							</div>
@@ -60,7 +60,7 @@
 							</div>
 							<div class="col-xs-10 col-height col-middle">
 								<div class="inside">
-									<div class="title">Email Address</div>
+									<div class="title">Email</div>
 									<p><a href="mailto:{{ support_email }}">{{ support_email }}</a></p>
 								</div>
 							</div>
