readied 674 instead of 640 and fixed news page. Missing double quote after link to pdf

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -86,7 +86,7 @@
 								<div class="timeline-body">
 									<div class="post-item">
 										<h2 class="post-title">
-											<a href="{{ path('_p_d_f_view', {'file': 'Scottsdale-Health-Partners-Case-Study.pdf'}) }}>Leading ACO, {{ company_name }}, Reduces Care Coordination Costs by 10% with TigerText</a>
+											<a href="{{ path('_p_d_f_view', {'file': 'Scottsdale-Health-Partners-Case-Study.pdf'}) }}">Leading ACO, {{ company_name }}, Reduces Care Coordination Costs by 10% with TigerText</a>
 										</h2>
 										<div class="post-content">
 											<p>{{ company_name }} (SHP) is a physician-led Clinical Integration Network and Accountable Care Organization (ACO) aiming to transform care delivery in the Arizona community. It is a joint venture formed by Scottsdale Lincoln Health Network (SLHN) and the Scottsdale Physician Organization, which is comprised of over 600 community physicians. SHP's network oers a world-class healthcare network of hospitals, physicians and clinicians that provides patients with a comprehensive, cohesive and integrated experience from their doctor’s oce to the hospital to ongoing care settings.</p>
