--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -97,7 +97,7 @@
 						</li>
 						<li>
 							<div class="timeline-icon">
-								<div class="date"><br/><span>'15</span></div>
+								<div class="date year"><br/><span>'15</span></div>
 							</div>
 						</li>
 						<li>
@@ -124,7 +124,7 @@
 						</li>
 						<li>
 							<div class="timeline-icon">
-								<div class="date"><br/><span>'13</span></div>
+								<div class="date year"><br/><span>'13</span></div>
 							</div>
 						</li>
 					</ul>
