--- a/src/SiteBundle/Resources/views/ForPatients/hospitals.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/hospitals.html.twig
@@ -81,7 +81,7 @@
 				<!-- Special Feature Box 1 -->
 				<div class="col-xs-6 col-sm-4 col-sm-offset-2">
 					<div class="s-feature-box text-center">
-						<a href="https://www.google.com/maps/place/John+C+Lincoln+Health+Network:+Svoren+Elana+MD/" target="_blank">
+						<a href="https://www.google.com/maps/place/HonorHealth+John+C.+Lincoln+Medical+Center/" target="_blank">
 							<div class="mask-top">
 								<!-- Icon -->
 								<h3>HonorHealth</h3>
@@ -94,7 +94,7 @@
 								<!-- Title -->
 								<h4>John C. Lincoln<br/>Medical Center</h4>
 								<!-- Text -->
-								<p>7th St. & Dunlap Ave.</p>
+								<p>2nd St. & Dunlap Ave.</p>
 							</div>
 						</a>
 					</div>
