--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-	<meta name="keywords" content="HTML5 Template" />
-	<meta name="description" content="Mist — Multi-Purpose HTML Template" />
-	<meta name="author" content="zozothemes.com" />
+	<meta name="keywords" content="aco, accountable, care, organization, health, partners, scottsdale, arizona" />
+	<meta name="description" content="Scottsdale Health Partners is a physician-led Clinical Integration Network and Accountable Care Organization. We are dedicated to improving patient health and reducing healthcare spend through collaboration, coordination, and communication in the community." />
+	<meta name="author" content="omedix.com" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<title>{{ company_name }}{% if title is defined %} | {{ title }}{% endif %}</title>
