added block where tracking code will be placed in the future.

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -507,3 +507,11 @@
 		</div>
 	</section>
 {% endblock %}
+
+{% block pe_googe_tracking %}
+	{#put google code here#}
+{% endblock %}
+
+{% block pe_sypfu %}
+	{#put spyfu code here#}
+{% endblock %}
