--- a/src/SiteBundle/Resources/views/ForPhysicians/forPhysicians.html.twig
+++ b/src/SiteBundle/Resources/views/ForPhysicians/forPhysicians.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'For Physicians' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:ForPhysicians:forPhysicians{% endblock %}
