--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'Board of Managers' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:About:boardOfDirectors{% endblock %}
