--- a/src/SiteBundle/Resources/views/About/executiveTeam.html.twig
+++ b/src/SiteBundle/Resources/views/About/executiveTeam.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'Executive Team' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:About:executiveTeams{% endblock %}
