--- a/src/SiteBundle/Resources/views/Aco/aco.html.twig
+++ b/src/SiteBundle/Resources/views/Aco/aco.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'Accountable Care Organization' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:ACO:ACO{% endblock %}
