--- a/src/SiteBundle/Resources/views/ForPatients/ourPhysicians.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/ourPhysicians.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'Our Physicians' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:ForPatients:ourPhysicians{% endblock %}
