--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -1,4 +1,7 @@
 {% set title = 'News' %}
+{% set meta_keywords = null %}
+{% set meta_description = null %}
+{% set meta_author = null %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:News:news{% endblock %}
