--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -43,7 +43,7 @@
 						<div class="row-height">
 							<div class="col-xs-2 col-height col-middle">
 								<div class="inside">
-									<i class="fa fa-microphone i-7x icons-circle text-color light-bg hover-black"></i>
+									<i class="fa fa-phone i-7x icons-circle text-color light-bg hover-black"></i>
 								</div>
 							</div>
 							<div class="col-xs-10 col-height col-middle">
